<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuslam</name>
  <version>0.0.4</version>
  <description>Package for SLAM implementation for turtlebot3 simulation</description>
  <maintainer email="ishaannarain2022@u.northwestern.edu">ishaannarain</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nuturtlebot_msgs</build_depend>  
  <build_depend>nav_msgs</build_depend>   
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>turtlelib</build_depend>
  <build_depend>armadillo</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nuturtle_control</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nuturtlebot_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>turtlelib</exec_depend>
  <exec_depend>armadillo</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <build_depend>nuturtle_control</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
